======================

Version 1.3.0
-------------

This version has not been released yet.

Source Repository:

 * The source repository was migrated from SVN to Git.

HTTP Interface:

 * No longer rewrites the X-CouchDB-Requested-Path during recursive
   calls to the rewriter.
 * Limit recursion depth in the URL rewriter. Defaults to a maximum
   of 100 invocations but is configurable.

Storage System:

 * Fixed unnecessary conflict when deleting and creating a
   document in the same batch.

View Server:

 * Speedup in the communication with external view servers.

Futon:

 * Added view request duration to Futon.

Security:

  * Passwords are now hashed using the PBKDF2 algorithm with a
    configurable work factor.

Test Suite:

  * Improved tracebacks printed by the JS CLI tests
  * Improved the reliability of a number of tests

Version 1.2.1
-------------

This version has not been released yet.

Version 1.2.0
-------------

Authentication:

 * Fix use of OAuth with VHosts and URL rewriting.
 * OAuth secrets can now be stored in the users system database
   as an alternative to key value pairs in the .ini configuration.
   By default this is disabled (secrets are stored in the .ini)
   but can be enabled via the .ini configuration key `use_users_db`
   in the `couch_httpd_oauth` section.
 * Documents in the _users database are no longer publicly
   readable.
 * Confidential information in the _replication database is no
   longer publicly readable.
 * Password hashes are now calculated by CouchDB. Clients are no
   longer required to do this manually.
 * Cookies used for authentication can be made persistent by enabling
   the .ini configuration key `allow_persistent_cookies' in the
   `couch_httpd_auth` section.

Build System:

 * cURL is no longer required to build CouchDB as it is only
   used by the command line JS test runner. If cURL is available
   when building CouchJS you can enable the HTTP bindings by
   passing -H on the command line.