@@ -19,6 +19,7 @@
 -export([handle_cast/2,code_change/3,handle_info/2,terminate/2]).
 -export([dev_start/0,is_admin/2,has_admins/0,get_stats/0,config_change/4]).
 -export([close_lru/0]).
+-export([get_uuid/0]).
 
 -include("couch_db.hrl").
 
@@ -35,6 +36,15 @@ dev_start() ->
     couch:stop(),
     up_to_date = make:all([load, debug_info]),
     couch:start().
+
+get_uuid() ->
+    case couch_config:get("couchdb", "uuid", nil) of
+        nil ->
+            UUID = couch_uuids:random(),
+            couch_config:set("couchdb", "uuid", ?b2l(UUID)),
+            UUID;
+        UUID -> ?l2b(UUID)
+    end.
 
 get_stats() ->
     {ok, #server{start_time=Time,dbs_open=Open}} =
