@@ -19,6 +19,7 @@ This version has not been released yet.
    document in the same batch.
  * New and updated passwords are hashed using PBKDF2.
  * Fix various bugs in the URL rewriter when recursion is involved.
+ * server-wide UUID in some replication ids.
 
 Version 1.2.1
 -------------
